fix: correct section alignments

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,14 @@
 /* GENERAL */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+section {
+  width: 100%;
+}
+
 h2 {
   text-align: center;
 }
